--- a/component.yaml
+++ b/component.yaml
@@ -21,6 +21,12 @@ inputs:
     title: Detox Configuration Name
     description: Specify the Detox configuration name to used when building and running the tests.
     helpText:
+  - key: "AC_RN_DETOX_ARGS"
+    defaultValue: "--take-screenshots all"
+    isRequired: true
+    title: Detox Extra Arguments
+    description: Specify the Detox extra commands to add the test command. Appcircle uses the command `detox build --configuration<configname>` command to be able to run Detox tests. The commands written here will be executed by appending detox build --configuration<configname> to the end of the command.
+    helpText:
 outputs:
   - key: "AC_TEST_RESULT_PATH"
     defaultValue: "AC_TEST_RESULT_PATH"
